--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <head>
+    <head ng-app="brokenstuffs">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>BrokenStuffs</title>
@@ -9,7 +9,8 @@
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
-
+		<script src="angular/angular.min.js"></script>
+		<script src="app.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -53,8 +54,7 @@
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
 
-        <script src="bootstrap/js/vendor/bootstrap.min.js"></script>
-
+        <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
