Remove hashing from angular : activate html5 mode Needs base balise in index.html to be filled

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html manifest="manifest.appcache" ng-app="brokenstuff">
     <head>
+        <!-- Commits %commitrange% at %endrev% -->
         <meta charset="utf-8">
+        <base href="/BrokenStuff/">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
