J'aime avoir des amis Enhance BS social capability with homepage social metatags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html manifest="manifest.appcache" ng-app="brokenstuff">
     <head>
-        <!-- Commits %commitrange% at %endrev% -->
+        <!-- Commits from - to : %commitrange% -->
         <meta charset="utf-8">
         <base href="/BrokenStuff/">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
