--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
         <title>BrokenStuff</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Une fois l'icone en place, décommenter ce bloc
-        <link rel="apple-touch-icon" href="touch-icon-iphone.png">
-<link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
-<link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
-<link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png"> -->
+        <link rel="apple-touch-icon" href="images/icon/ios/AppIcon.appiconset/Icon-60@2x.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="images/icon/ios/AppIcon.appiconset/Icon-60@3x.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="images/icon/ios/AppIcon.appiconset/Icon-76.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="images/icon/ios/AppIcon.appiconset/Icon-76@2x.png" />
+        <link rel="apple-touch-icon" sizes="58x58" href="images/icon/ios/AppIcon.appiconset/Icon-Small@2x.png" />
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 <!--         <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
