--- a/index.html
+++ b/index.html
@@ -9,14 +9,28 @@
         <title>BrokenStuff</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="images/icon/ios/AppIcon.appiconset/Icon-60@2x.png" />
-        <link rel="apple-touch-icon" sizes="180x180" href="images/icon/ios/AppIcon.appiconset/Icon-60@3x.png" />
-        <link rel="apple-touch-icon" sizes="76x76" href="images/icon/ios/AppIcon.appiconset/Icon-76.png" />
-        <link rel="apple-touch-icon" sizes="152x152" href="images/icon/ios/AppIcon.appiconset/Icon-76@2x.png" />
-        <link rel="apple-touch-icon" sizes="58x58" href="images/icon/ios/AppIcon.appiconset/Icon-Small@2x.png" />
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
+         <!--  icons -->
+        <link rel="apple-touch-icon" sizes="57x57" href="images/icon/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="images/icon/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="images/icon/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="images/icon/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="images/icon/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="images/icon/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="images/icon/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="images/icon/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="images/icon/apple-touch-icon-180x180.png">
+        <link rel="icon" type="image/png" href="images/icon/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="images/icon/favicon-194x194.png" sizes="194x194">
+        <link rel="icon" type="image/png" href="images/icon/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="images/icon/android-chrome-192x192.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="images/icon/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="images/icon/manifest.json">
+        <link rel="shortcut icon" href="images/icon/favicon.ico">
+        <meta name="msapplication-TileColor" content="#cddc39">
+        <meta name="msapplication-TileImage" content="images/icon/mstile-144x144.png">
+        <meta name="msapplication-config" content="images/icon/browserconfig.xml">
+        <meta name="theme-color" content="#cddc39">
+         <!--  /icons -->
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 <!--         <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
  -->        <link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
