--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <html manifest="manifest.appcache" ng-app="brokenstuff">
     <head>
         <!-- Commits from - to : %commitrange% -->
-        <meta charset="utf-8">
-        <base href="/BrokenStuff/">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <title>BrokenStuff</title>
+        <base href="/BrokenStuff/">
+        <meta charset="utf-8">
         <meta name="description" content="">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+        <!-- CONFIGURATION -->
+        <!-- Allow web app to be run in full-screen mode. -->
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <!-- Make the app title different than the page title. -->
+        <meta name="apple-mobile-web-app-title" content="BrokenStuff">
+        <!-- Configure the status bar. -->
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <!-- Set the viewport. -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-         <!--  icons -->
+        <!-- Disable automatic phone number detection. -->
+        <meta name="format-detection" content="telephone=no">
+         <!--  ICONS -->
         <link rel="apple-touch-icon" sizes="57x57" href="images/icon/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="images/icon/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="images/icon/apple-touch-icon-72x72.png">
@@ -31,6 +40,66 @@
         <meta name="msapplication-config" content="images/icon/browserconfig.xml">
         <meta name="theme-color" content="#cddc39">
          <!--  /icons -->
+
+         <!--  STARTUP SCREENS -->
+        <!-- iPad retina portrait startup image -->
+        <link href="images/startup/ios/res/Default-Portrait@2x.png"
+              media="(device-width: 768px) and (device-height: 1024px)
+                     and (-webkit-device-pixel-ratio: 2)
+                     and (orientation: portrait)"
+              rel="apple-touch-startup-image">
+        <!-- iPad retina landscape startup image -->
+        <link href="images/startup/ios/res/Default-Landscape@2x.png"
+              media="(device-width: 768px) and (device-height: 1024px)
+                     and (-webkit-device-pixel-ratio: 2)
+                     and (orientation: landscape)"
+              rel="apple-touch-startup-image">
+        <!-- iPad non-retina portrait startup image -->
+        <link href="images/startup/ios/res/Default-Portrait.png"
+              media="(device-width: 768px) and (device-height: 1024px)
+                     and (-webkit-device-pixel-ratio: 1)
+                     and (orientation: portrait)"
+              rel="apple-touch-startup-image">
+        <!-- iPad non-retina landscape startup image -->
+        <link href="images/startup/ios/res/Default-Landscape.png"
+              media="(device-width: 768px) and (device-height: 1024px)
+                     and (-webkit-device-pixel-ratio: 1)
+                     and (orientation: landscape)"
+              rel="apple-touch-startup-image">
+        <!-- iPhone 6 Plus portrait startup image -->
+        <link href="images/startup/ios/res/Default-Portrait-736h@3x.png"
+              media="(device-width: 414px) and (device-height: 736px)
+                     and (-webkit-device-pixel-ratio: 3)
+                     and (orientation: portrait)"
+              rel="apple-touch-startup-image">
+        <!-- iPhone 6 Plus landscape startup image -->
+        <link href="images/startup/ios/res/Default-Landscape-736h@3x.png"
+              media="(device-width: 414px) and (device-height: 736px)
+                     and (-webkit-device-pixel-ratio: 3)
+                     and (orientation: landscape)"
+              rel="apple-touch-startup-image">
+        <!-- iPhone 6 startup image -->
+        <link href="images/startup/ios/res/Default-667h@2x.png"
+              media="(device-width: 375px) and (device-height: 667px)
+                     and (-webkit-device-pixel-ratio: 2)"
+              rel="apple-touch-startup-image">
+        <!-- iPhone 5 startup image -->
+        <link href="images/startup/ios/res/Default-568h@2x.png"
+              media="(device-width: 320px) and (device-height: 568px)
+                     and (-webkit-device-pixel-ratio: 2)"
+              rel="apple-touch-startup-image">
+        <!-- iPhone < 5 retina startup image -->
+        <link href="images/startup/ios/res/Default@2x.png"
+              media="(device-width: 320px) and (device-height: 480px)
+                     and (-webkit-device-pixel-ratio: 2)"
+              rel="apple-touch-startup-image">
+        <!-- iPhone < 5 non-retina startup image -->
+        <link href="images/startup/ios/res/Default.png"
+              media="(device-width: 320px) and (device-height: 480px)
+                     and (-webkit-device-pixel-ratio: 1)"
+              rel="apple-touch-startup-image">
+        <!--  /STARTUP SCREENS -->
+
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 <!--         <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
  -->        <link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
