changement du href base

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <!-- Commits from - to : %commitrange% -->
         <title>BrokenStuff</title>
-        <base href="/BrokenStuff/">
+        <base href="/">
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
