--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 <!--         <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
  -->        <link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.js"></script>      
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.js"></script>  
+        <script src="angular/angular-locale_fr-fr.js"></script>    
 <!--         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
  -->        <link rel="stylesheet" href="dist/css/material.min.css">
         <link rel="stylesheet" href="dist/mprogress.css">
